small admin jako defer

--- a/src/app/admin/small-admin/small-admin.component.html
+++ b/src/app/admin/small-admin/small-admin.component.html
@@ -3,3 +3,238 @@
 <p>small-admin works!</p>
 <p>small-admin works!</p>
 <p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
+<p>small-admin works!</p>
