--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,6 +1,3 @@
-<p>admin works!</p>
-<p>admin works!</p><p>admin works!</p><p>admin works!</p>
-<p>admin works!</p>
-<p>admin works!</p>
-<p>admin works!</p>
+@defer {
 <app-small-admin></app-small-admin>
+}
